fixed z-index

--- a/src/pages/Login-page/style.module.css
+++ b/src/pages/Login-page/style.module.css
@@ -18,7 +18,7 @@
 
 @media (max-width: 768px) {
   .bgImg {
-    z-index: 1;
+    z-index: -1;
     position: absolute;
     /* background-size: 100%; */
     width: 720px;
